src/objects/Key_Affected_OEMs_Operators__c/Key_Affected_OEMs_Operators__c.object-meta.xml
<CustomObject>
    <label>Key Affected OEMs/Operators</label>
    <nameField>
        <displayFormat>OEM{0}</displayFormat>
        <label>Key Affected OEM(s) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Affected OEMs/Operators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>