src/objects/Key_Affected_OEMs_Operators__c/fields/OEM_Operator__c.field-meta.xml
<CustomField>
    <fullName>OEM_Operator__c</fullName>
    <label>OEM/Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Operator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>