src/objects/Key_Affected_OEMs_Operators__c/fields/Planned_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Planned_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planned Meeting</label>
    <referenceTo>Planned_Meeting__c</referenceTo>
    <relationshipLabel>Key Affected OEMs/Operators</relationshipLabel>
    <relationshipName>Key_Affected_OEMs_Operators</relationshipName>
    <type>Lookup</type>
</CustomField>