src/objects/Key_Affected_OEMs_Operators__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Key Affected OEMs/Operators</relationshipLabel>
    <relationshipName>Key_Affected_OEMs</relationshipName>
    <type>Lookup</type>
</CustomField>